Cleanup and errors management

--- a/PokeShakeAPI/appsettings.json
+++ b/PokeShakeAPI/appsettings.json
@@ -12,7 +12,8 @@
     "UserAgent": "PokeShakeAPI (https://gitlab.com/galloverde11/PokeShakeAPI or a fork of it)",
     "RandomDescription": false,
     "UseCache": true,
-    "CacheSuffix": "pokecache_"
+    "CacheSuffix": "pokecache_",
+    "ResourceNotFoundMsg": "It was not possible to get the description"
   },
   "Shakespeare": {
     "DefaultSiteURL": "https://api.funtranslations.com",
@@ -21,7 +22,7 @@
     "RandomDescription": false,
     "UseCache": true,
     "CacheSuffix": "shakecache_",
-    "TranslationNotFoundMsg": "It was not possible to get a translation"
+    "ResourceNotFoundMsg": "It was not possible to get a translation"
   },
   "AllowedHosts": "*"
 }
